<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/definite_dimen_80"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/definite_dimen_30"
            android:background="@drawable/custom_image_icon_left"
            android:src="@drawable/ic_left_arrow"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/definite_dimen_40"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/definite_dimen_8"
            android:layout_marginEnd="@dimen/definite_dimen_8"
            android:src="@drawable/spotify_logo"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/definite_dimen_10"
        android:fontFamily="@font/montserrat"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/layoutSuggest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister">

        <TextView
            android:id="@+id/tvSuggest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/definite_dimen_16"
            android:fontFamily="@font/montserrat"
            android:text="@string/if_you_need_any_support_click_here"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/tvSuggest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/definite_dimen_2"
            android:layout_marginTop="@dimen/definite_dimen_16"
            android:layout_toEndOf="@id/tvSuggest1"
            android:fontFamily="@font/montserrat"
            android:text="@string/click_here"
            android:textColor="@color/green_text"
            android:textSize="@dimen/text_size_xsmall" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutSuggest"
        android:layout_marginTop="@dimen/definite_dimen_30"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSuggest">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/definite_dimen_30"
            android:layout_marginEnd="@dimen/definite_dimen_30"
            android:layout_marginBottom="@dimen/definite_dimen_16"
            android:background="@drawable/custom_edt"
            android:hint="@string/full_name"
            android:paddingStart="@dimen/definite_dimen_20"
            android:paddingBottom="@dimen/definite_dimen_8"
            android:textColorHint="@color/stroke_letter"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_transparent"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/definite_dimen_30"
            android:layout_marginEnd="@dimen/definite_dimen_30"
            android:layout_marginBottom="@dimen/definite_dimen_16"
            android:background="@drawable/custom_edt"
            android:hint="@string/enter_email"
            android:paddingStart="@dimen/definite_dimen_20"
            android:paddingBottom="@dimen/definite_dimen_8"
            android:textColorHint="@color/stroke_letter"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameMailInputEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_transparent"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/definite_dimen_30"
            android:layout_marginEnd="@dimen/definite_dimen_30"
            android:layout_marginBottom="@dimen/definite_dimen_16"
            android:background="@drawable/custom_edt"
            android:hint="@string/password"
            android:paddingStart="@dimen/definite_dimen_20"
            android:paddingEnd="@dimen/definite_dimen_10"
            android:paddingBottom="@dimen/definite_dimen_8"
            android:textColorHint="@color/stroke_letter"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/stroke_letter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_transparent"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRepeatInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/definite_dimen_30"
            android:layout_marginEnd="@dimen/definite_dimen_30"
            android:background="@drawable/custom_edt"
            android:hint="@string/repeat_password"
            android:paddingStart="@dimen/definite_dimen_20"
            android:paddingEnd="@dimen/definite_dimen_10"
            android:paddingBottom="@dimen/definite_dimen_8"
            android:textColorHint="@color/stroke_letter"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/stroke_letter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRepeatInputEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_transparent"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/green_text"
                android:textSize="@dimen/text_size_normal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvRegisterInRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/definite_dimen_30"
        android:layout_marginTop="@dimen/definite_dimen_16"
        android:layout_marginEnd="@dimen/definite_dimen_30"
        android:background="@drawable/default_custom_button_green"
        android:fontFamily="@font/montserrat"
        android:paddingTop="@dimen/definite_dimen_20"
        android:paddingBottom="@dimen/definite_dimen_20"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEdt" />

    <RelativeLayout
        android:id="@+id/layoutOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/definite_dimen_30"
        android:layout_marginTop="@dimen/definite_dimen_20"
        android:layout_marginEnd="@dimen/definite_dimen_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterInRegisterLayout">

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tvOr"
            android:background="@color/stroke_letter" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/definite_dimen_16"
            android:layout_marginEnd="@dimen/definite_dimen_16"
            android:fontFamily="@font/montserrat"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/stroke_letter"
            android:textSize="@dimen/text_size_xsmall" />

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tvOr"
            android:background="@color/stroke_letter" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutLoginChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/definite_dimen_30"
        android:layout_marginTop="@dimen/definite_dimen_20"
        android:layout_marginEnd="@dimen/definite_dimen_30"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutOr">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/definite_dimen_50"
            android:layout_weight="1"
            android:background="@drawable/custom_button_login_layout"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fb_2"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/definite_dimen_50"
            android:layout_marginStart="@dimen/definite_dimen_20"
            android:layout_marginEnd="@dimen/definite_dimen_20"
            android:layout_weight="1"
            android:background="@drawable/custom_button_login_layout"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/definite_dimen_50"
            android:layout_weight="1"
            android:background="@drawable/custom_button_login_layout"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_apple"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/definite_dimen_20"
        android:layout_marginBottom="@dimen/definite_dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLoginChoice">

        <TextView
            android:id="@+id/tvRegister1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/have_an_account"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/tvLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/definite_dimen_2"
            android:layout_toEndOf="@id/tvRegister1"
            android:fontFamily="@font/montserrat"
            android:text="@string/log_in"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_xsmall" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>